# CMake

Geometry/: CMakeLists.txt
Geometry/Geometry/: CMakeLists.txt  Geometry.cpp  Geometry.h
my_first_cmake_project/: CMakeLists.txt
my_first_cmake_project/my_first_cmake_project/: CMakeLists.txt  my_first_cmake_project.cpp  my_first_cmake_project.h
