# CMakeList.txt: проект CMake для my_first_cmake_project; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#

# Добавьте источник в исполняемый файл этого проекта.
add_executable (my_first_cmake_project "my_first_cmake_project.cpp" "my_first_cmake_project.h")


# TODO: Добавьте тесты и целевые объекты, если это необходимо.
